--- a/Samim.PresentationLayer/appsettings.json
+++ b/Samim.PresentationLayer/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"DBConnection": "Data Source=.;Initial Catalog=Context;Database=Samim;User Id=sa;Password=aA123456;"
+	}
 }
