--- a/Samim.BusinessLayer/Samim.BusinessLayer.csproj
+++ b/Samim.BusinessLayer/Samim.BusinessLayer.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Samim.DomainLayer\Samim.DomainLayer.csproj" />
+    <ProjectReference Include="..\Samim.ViewModel\Samim.ViewModel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
       <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.configuration.abstractions\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
     </Reference>
