--- a/Samim.DataLayer/Samim.DataLayer.csproj
+++ b/Samim.DataLayer/Samim.DataLayer.csproj
@@ -10,7 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Samim.BusinessLayer\Samim.BusinessLayer.csproj" />
+    <ProjectReference Include="..\Samim.DomainLayer\Samim.DomainLayer.csproj" />
+    <ProjectReference Include="..\Samim.ViewModel\Samim.ViewModel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
