--- a/Samim.ViewModel/Samim.ViewModel.csproj
+++ b/Samim.ViewModel/Samim.ViewModel.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Samim.DomainLayer\Samim.DomainLayer.csproj" />
+  </ItemGroup>
+
 </Project>
