SideBarMenu is functionalgit add .

--- a/Samim.PresentationLayer/Samim.PresentationLayer.csproj
+++ b/Samim.PresentationLayer/Samim.PresentationLayer.csproj
@@ -5,6 +5,10 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="Views\Account\rhand-mccoy-4SuGk6t64rc-unsplash.jpg" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
