--- a/Samim.ViewModel/Samim.ViewModel.csproj
+++ b/Samim.ViewModel/Samim.ViewModel.csproj
@@ -8,4 +8,13 @@
     <ProjectReference Include="..\Samim.DomainLayer\Samim.DomainLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Identity.Stores">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.stores\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
+    </Reference>
+    <Reference Include="Samim.DataLayer">
+      <HintPath>..\Samim.DataLayer\bin\Debug\netcoreapp2.2\Samim.DataLayer.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
