--- a/Samim.PresentationLayer/appsettings.json
+++ b/Samim.PresentationLayer/appsettings.json
@@ -5,7 +5,8 @@
 		}
 	},
 	"AllowedHosts": "*",
-	"ConnectionStrings": {
-		"DBConnection": "Data Source=.;Initial Catalog=Context;Database=Samim;User Id=sa;Password=aA123456;"
-	}
+    "ConnectionStrings": {
+        "DBConnection": "Data Source=.;Initial Catalog=Context;Database=Samim;User Id=sa;Password=aA123456;"
+    },
+    "PageSize": "2"
 }
